# vietnamese_translation

./: .env.example  .gitignore  BRANCH_STATUS.txt  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  REFACTOR_SUMMARY.md  audio.py  config.py  database.py  docker-compose.yml  live_translator.py  logger.py  main.py  models.py  pipeline_monolith.py  pyproject.toml  render.yaml  requirements-streamlit.txt  requirements.txt  setup.sh  start.sh  streamlit_app.py  translator.py
.streamlit/: config.toml
docs/: API_GUIDE.md  COMPLETION_STATUS.md  DEPLOYMENT_CHECKLIST.md  DOCKER_GUIDE.md  INDEX.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_SUMMARY.md  RENDER_DEPLOYMENT.md  START_HERE.md
frontend/: index.html  script.js  styles.css
src/: __init__.py  app.py  audio.py  config.py  database.py  live_translator.py  main.py  test_api.py  translator.py
